@@ -1,10 +1,10 @@
 
 Hexen II Launcher for linux / unix
-with GTK+ interface. Version 1.0.4
+with GTK+ interface. Version 1.0.5
 ----------------------------------
 
 Place the launcher binary into the directory that you installed
-Hammer of Thyrion v1.4.4.  Execute it and enjoy. You can also
+Hammer of Thyrion v1.5.0.  Execute it and enjoy. You can also
 create a symlink for it in a directory on your path.  Examples:
 
 # ln -s /usr/local/games/hexen2/h2launcher  /home/my_name/bin/hexen2
@@ -22,8 +22,8 @@ from any place.
 
 This version of the Hexen II Launcher has the integrated ability
 of patching the retail cdrom pak files to Raven's 1.11 version.
-It utilizes xdelta-1.1.3/1.1.4 libraries which have been included
-in the Hammer of Thyrion sources since version 1.4.2.
+It utilizes xdelta3 libraries which have been included in Hammer
+of Thyrion sources since version 1.5.0.
 
 TODO:
 ----------
@@ -37,16 +37,11 @@ TODO:
 COMPILING:
 ----------
 
-1. First compile the included xdelta library (see the README-1.1.4a
-   file in the xdelta11 directory, but it is as simple as typing:
-   make -f Makefile.xd )
-
-2. Compile the launcher normally:
-
 	cd launcher
 	make
 
    Note: If you want to build it against gtx-1.2.x instead of gtk-2.x,
-   you must compile xdelta against glib-1.2.x (see above). Then do:
+   do:
+
 	make GTK1=yes
 
